# pii-shield

./: .gitignore  AUDIT_TRACKER.md  CHANGELOG.md  CLAUDE.md  Dockerfile  PREPROCESSING_LOGIC.md  README.md  SECURITY.md  config.yaml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
api_service/: Dockerfile  README.md  app.py  docker-compose.yml  prometheus_metrics.py  requirements.txt
config/: api_service.yaml  logging.yaml  redis.yaml  scaling.yaml  web_service.yaml
data/: names.json  names.txt
docker/: .env.example  .env.prod.template  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHAT_SERVICE.md  DEPLOYMENT.md  DEVOPS_STRATEGY.md  E2E_TEST_REPORT.md  FILE_AND_FLOW.md  GOOGLE_CLOUD.md  HOWTO.md  IMPLEMENTATION_TRACKER.md  IMPROVEMENTS_DONE.md  KEBD.md  MEMORY.md  MONITORING.md  SECURITY.md  SERVICE_COMMUNICATION.md  STANDALONE_SYNC_TRACKER.md  TROUBLESHOOTING.md
docs/learning/: 01-git-github-setup.md  02-docker-containerization.md  03-cloud-run-deployment.md  04-github-actions-cicd.md  05-workload-identity-federation.md  06-secrets-and-security.md  07-troubleshooting-guide.md  LEARNING_GUIDE.md
scripts/: deploy-dev.ps1  deploy-dev.sh  deploy-gcp.sh  deploy-prod.ps1  deploy-prod.sh  promote-to-prod-gcp.sh  promote-to-prod.ps1  promote-to-prod.sh  run_comprehensive_tests.ps1  run_comprehensive_tests.sh  setup-docker-rhel.sh  setup-docker-wsl2.sh  test_components.py
shared/: __init__.py  autoscaler.py  config_loader.py  job_queue.py  logging_config.py  redis_client.py  resource_monitor.py
src/pi_remover/: __init__.py  __main__.py  config.py  core.py  data_classes.py  dictionaries.py  exceptions.py  model_manager.py  ner.py  patterns.py  remover.py  sanitizer.py  security.py  utils.py
src/pi_remover/processors/: __init__.py  file_processor.py
tests/: test_api.py  test_comprehensive_pi.py  test_edge_cases.py  test_remover.py  test_service_integration.py
web_service/: Dockerfile  api_client.py  app.py  docker-compose.yml  requirements.txt
web_service/static/: .gitkeep  app.js  styles.css
web_service/templates/: index.html
