[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-remover"
version = "2.16.0"
description = "Enterprise-grade Personal Information (PI/PII) removal tool for IT support data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "PI Remover Team"}
]
keywords = [
    "pii",
    "pi",
    "personal-information",
    "redaction",
    "privacy",
    "data-cleaning",
    "llm-safety",
    "enterprise",
    "compliance",
    "gdpr"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Text Processing",
    "Typing :: Typed",
]

dependencies = [
    "pandas>=2.0.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Full mode with NER
full = [
    "spacy>=3.7.0",
]
# Excel support
excel = [
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
]
# API/Web service dependencies
api = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.0",
    "jinja2>=3.1.0",
]
# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]
# All optional dependencies
all = [
    "pi-remover[full,excel,api,dev]",
]

[project.scripts]
pi-remover = "pi_remover.core:run_cli"

[project.urls]
Homepage = "https://github.com/your-org/pi-remover"
Documentation = "https://github.com/your-org/pi-remover#readme"
Repository = "https://github.com/your-org/pi-remover"
Issues = "https://github.com/your-org/pi-remover/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pi_remover = ["py.typed"]

# =============================================================================
# TOOL CONFIGURATIONS
# =============================================================================

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | misc
    | output
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "misc",
    "output",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "misc/",
    "output/",
    "tests/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/pi_remover"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
